--- a/RemoteCommand/RemoteCommand.csproj
+++ b/RemoteCommand/RemoteCommand.csproj
@@ -41,14 +41,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Appliances.cs" />
+    <Compile Include="CelingFan.cs" />
+    <Compile Include="GarageDoor.cs" />
+    <Compile Include="HotTub.cs" />
     <Compile Include="ICommand.cs" />
-    <Compile Include="Commands.cs" />
+    <Compile Include="MacroCommand.cs" />
+    <Compile Include="NoCommands.cs" />
+    <Compile Include="Light.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RemoteControl.cs" />
     <Compile Include="RemoteLoader.cs" />
     <Compile Include="SimpleRemoteControl.cs" />
+    <Compile Include="Stereo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
